[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/HelthUI.gd" type="Script" id=1]
[ext_resource path="res://UI/HeartUIEmpty.png" type="Texture" id=2]
[ext_resource path="res://UI/HeartUIFull.png" type="Texture" id=3]

[node name="HelthUI" type="Control"]
margin_right = 60.0
margin_bottom = 11.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartUIEmpty" type="TextureRect" parent="."]
margin_right = 60.0
margin_bottom = 11.0
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartUIFull" type="TextureRect" parent="."]
margin_right = 15.0
margin_bottom = 11.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeUIEmpty" type="ColorRect" parent="."]
margin_top = 12.0
margin_right = 100.0
margin_bottom = 16.0
color = Color( 0, 0, 0, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeUIFull" type="ColorRect" parent="."]
margin_top = 13.0
margin_right = 100.0
margin_bottom = 15.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
